# CS-210-8-1-journal

./: CMakeLists.txt  DepositFeatureSet.h  DepositSimulator.cpp  DepositSimulator.h  README.md  StaticReport.cpp  StaticReport.h  main.cpp
